--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,21 +9,45 @@ body {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+  font-family: 'Fira Sans';
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Poppins';
+}
+
 
 a,
 p,
-button {
-  font-size: 1rem !important;
+button,
+li,
+span,
+div,
+nav,
+section,
+link {
+  font-size: 1rem;
   line-height: 1.5rem;
+  font-family: 'Fira Sans';
 }
 
 @media screen and (max-width: 768px) {
 
   a,
   p,
-  button {
-    font-size: 0.875rem !important;
+  button,
+  li,
+  span,
+  div,
+  nav,
+  section,
+  link {
+    font-size: 0.875rem;
     line-height: 1.25rem;
   }
 }
@@ -30,8 +56,14 @@ button {
 
   a,
   p,
-  button {
-    font-size: 0.75rem !important;
+  button,
+  li,
+  span,
+  div,
+  nav,
+  section,
+  link {
+    font-size: 0.75rem;
     line-height: 1rem;
   }
 }
