--- a/src/components/pages/PublicPage/Home/ExploreBD/ExploreBD.css
+++ b/src/components/pages/PublicPage/Home/ExploreBD/ExploreBD.css
@@ -27,6 +27,8 @@
 
 #explorebd .swiper-pagination-bullet {
     background: #ffb700;
+    margin: 0 10px;
+    margin-top: 5px;
 }
 
 #explorebd .swiper-button-next,
@@ -38,11 +40,21 @@
     #explorebd .swiper {
         padding-bottom: 0rem;
     }
+
+    #explorebd .swiper-pagination-bullet {
+        background: #ffb700;
+        margin: 0 5px;
+    }
 }
 
 @media screen and (max-width: 768px) {
     #explorebd .swiper {
         padding-bottom: 4rem;
+    }
+
+    #explorebd .swiper-pagination-bullet {
+        background: #ffb700;
+        margin: 0 8px;
     }
 }
 
